--- a/about.html
+++ b/about.html
@@ -11,53 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <!--<div id="logo-img" alt="Logo image"></div>-->
-          </a>
-
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Dana Energy</h1></a>
-          </div>
-
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
-                <span class="glyphicon glyphicon-home"></span> Home</a>
-            </li>
-            <li id="navMenuButton">
-              <a href="sound_baths.html" ">
-                <span class="glyphicon glyphicon-headphones"></span><br class="hidden-xs"> Sound Baths</a>
-            </li>
-            <li>
-              <a href="theta_healing.html">
-                <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> Theta Healing</a>
-            </li>
-            <li>
-              <a href="about.html">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> About</a>
-            </li><!--
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
-            </li>-->
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
+  <header></header>
 
   <!--
   <div id="call-btn" class="visible-xs">
@@ -68,7 +22,7 @@
   </div>-->
 
   <div id="main-content" class="container">
-    <div>About Me</div>
+    <h1>About Me</h1>
     I have a very strong belief in the ThetaHealing tecnique because it changed my life from one of being bedridden with an incurable disease into a life full of activity, joy, happiness and unconditional love. 
 I desire to let everyone who feels stuck in any area of their life to know that it is possible to change their life for the better.  I have been using this technique on myself and on my clients for 16 years.
 "One of my deepest passions is connecting to The Creator of all that is- in service to those who are ready to heal, change their story and create the life of their dreams!"
@@ -108,3 +62,4 @@ I desire to let everyone who feels stuck in any area of their life to know that 
   <script src="js/script.js"></script>
 </body>
 </html>
+
