--- a/index.html
+++ b/index.html
@@ -11,54 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <!--<div id="logo-img" alt="Logo image"></div>-->
-          </a>
-
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Dana Energy</h1></a>
-          </div>
-
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-          <ul id="nav-list" class="nav navbar-nav navbar-right">
-           <li id="navHomeButton" class="visible-xs active">
-             <a href="index.html">
-               <span class="glyphicon glyphicon-home"></span> Home</a>
-           </li>
-           <li id="navMenuButton">
-             <a href="sound_baths.html" ">
-               <span class="glyphicon glyphicon-headphones"></span><br class="hidden-xs"> Sound Baths</a>
-           </li>
-           <li>
-             <a href="theta_healing.html">
-               <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> Theta Healing</a>
-           </li>
-           <li>
-             <a href="about.html">
-               <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> About</a>
-           </li><!--
-           <li id="phone" class="hidden-xs">
-             <a href="tel:410-602-5008">
-               <span>410-602-5008</span></a><div>* We Deliver</div>
-           </li>-->
-         </ul><!-- #nav-list -->
-       </div><!-- .collapse .navbar-collapse -->
-     </div><!-- .container -->
-   </nav><!-- #header-nav -->
- </header>
-
+  <header></header>
   <!--
   <div id="call-btn" class="visible-xs">
     <a class="btn" href="tel:410-602-5008">
@@ -68,7 +21,7 @@
   </div>-->
 
   <div id="main-content" class="container">
-    <div>Welcome to ThetaHealing with Dana! 🙂</div>
+    <h1>Welcome to ThetaHealing with Dana! 🙂</h1>
     
     <p id="sbp">
       <img src="images/sound_bath2.jpg" >
@@ -117,5 +70,6 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/ajax-utils.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/script2.js"></script>
 </body>
 </html>
