--- a/theta_healing.html
+++ b/theta_healing.html
@@ -11,53 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <!--<div id="logo-img" alt="Logo image"></div>-->
-          </a>
-
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Dana Energy</h1></a>
-          </div>
-
-          <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
-                <span class="glyphicon glyphicon-home"></span> Home</a>
-            </li>
-            <li id="navMenuButton">
-              <a href="sound_baths.html" ">
-                <span class="glyphicon glyphicon-headphones"></span><br class="hidden-xs"> Sound Baths</a>
-            </li>
-            <li>
-              <a href="theta_healing.html">
-                <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> Theta Healing</a>
-            </li>
-            <li>
-              <a href="about.html">
-                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> About</a>
-            </li><!--
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
-            </li>-->
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>
+  <header></header>
 
   <!--
   <div id="call-btn" class="visible-xs">
@@ -68,7 +22,7 @@
   </div>-->
 
   <div id="main-content" class="container">
-    <div>Theta Healing</div>
+    <h1>Theta Healing</h1>
     I guide my clients into a deep Theta brain wave and assist people to improve their lives in all areas- Physical, emotional, spiritual, mental, financial/abundance, relationships, career, goal achievement, empowerment and much more during private sessions or group vibrational sound baths. Call or message me for questions -or appointments. 435-757-6722
   </div>
 
