--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dana Energy</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="http://fonts.cdnfonts.com/css/papyrus" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
