Change font import

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link href="http://fonts.cdnfonts.com/css/papyrus" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/papyrus" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
@@ -36,38 +36,7 @@
       *This link works on a computer but class info and registration does not appear on smartphones.  Message me for details 🙂  you can also find me at Dana Neves Wylie
     </div>
 
-  <footer class="panel-footer">
-    <div class="container">
-      <div class="row">
-        <section id="contact" class="col-sm-6">
-          <span>Contact me:</span><br>
-          <a href = "tel: 435-757-6722"  id="phne">
-            <i class="fa fa-phone"><span>435-757-6722</span></i>
-          </a>
-          <br>
-          <a href = "mailto: danaenergy@aol.com"  id="email">
-            <i class="fa fa-envelope"><span>danaenergy@aol.com</span> </i>
-          </a>
-          <br>
-          <a href="https://instagram.com/danaenergy?utm_medium=copy_link" id="instagram">
-            <i class="fab fa-instagram"><span>danaenergy</span></i>
-          </a>
-          <br>
-          <a href="#" id="tiktok">
-            <i class="fab fa-tiktok"><span>danahealings.soundbath</span></i>
-          </a>
-          <br>
-          <a href="https://www.facebook.com/dana.wylie.96" id="facebook">
-            <i class="fab fa-facebook"><span>dana.wylie.96</span></i>
-          </a>
-        </section>
-        <section id="address" class="col-sm-6">
-          <span></span><br>
-        </section>
-      </div>
-      <div class="text-center">&copy; Copyright DanaEnergy 2021</div>
-    </div>
-  </footer>
+  <footer class="panel-footer"></footer>
 
   <!--
     https://www.facebook.com/danaenergy
