--- a/snippets/footerSnippet.html
+++ b/snippets/footerSnippet.html
@@ -1,24 +1,29 @@
-<!--(Fb icon) then https://www.facebook.com/dana.wylie.96
-(IG icon) danaenergy https://instagram.com/danaenergy?utm_medium=copy_link
-(Tik Tok icon) danahealings.soundbath
+    <div class="container">
+        <div class="row">
+          <section id="contact" class="container col-sm-6">
+            <!-- <span>Contact me:</span><br> -->
+            <a href = "tel: 435-757-6722"  id="phne">
+              <i class="fa fa-phone"></i>
+              <div>435-757-6722</div>
+            </a>
+            <a href = "mailto: ThetaAngel11@gmail.com"  id="email">
+              <i class="fa fa-envelope"> </i>
+              <div>ThetaAngel11@gmail.com</div>
+            </a>
+            <a href="https://instagram.com/danaenergy?utm_medium=copy_link" id="instagram">
+              <i class="fab fa-instagram"></i>
+              <div>danaenergy</div>
+            </a>
+            <a href="#" id="tiktok">
+              <i class="fab fa-tiktok"></i>
+              <div>danahealings.soundbath</div>
+            </a>
+            <a href="https://www.facebook.com/dana.wylie.96" id="facebook">
+              <i class="fab fa-facebook"></i>
+              <div>dana.wylie.96</div>
+            </a>
+        </div>
+        <div class="text-center">&copy; Copyright DanaEnergy 2022</div>
+      </div>
+    
 
-Sound Bath info:
-
-I have been doing sound baths since 2016 starting with a single crystal singing bowl and was mentored by a master musician/sound healer  for 4 years while playing large public sound baths in Northern Utah.  My divine spiritual team also guides me while playing🙏
-
-What is a ‘sound bath’?
-
-The sound vibrations and frequencies wash over and through your cells.. you are ‘bathed in high vibes’!
-
-For a private vibrational sound healing session:
-You get to lay on my sound healing table with crystal bowls around you, Tibetan singing bowls around and on you, you’ll experience drumming over you, a gong bath at your head, chimes, tuning forks, rattles, rainsticks, thunder makers, flutes, an angelic crystal harp and I will give you some ThetaHealing downloads relating to your issues or intention while energetically holding you in a space of unconditional love and light.  The sound vibrations and frequencies wash over and through your body releasing stress and opening you up to holistic healing, increasing creativity and manifestations and leaving you in a very deep state of relaxation, peace and well being.  Message me for prices.
-
--Private session:  $75
--Semi- private sessions with  2-4 people are $100 ($25-50/person)
-Groups of 5-10  $200 ($20-$40/person)
-Public sound baths minimum $300  ($25/person)
-🙌🦋🙏✨
-Cash
-Venmo:  DanaWylie44 or PayPal.me/danawylie
-
--->
