--- a/snippets/headerSnippet.html
+++ b/snippets/headerSnippet.html
@@ -25,7 +25,7 @@
           </li>
           <li>
             <a href="theta_healing.html">
-              <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> Theta Healing</a>
+              <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> ThetaHealing</a>
           </li>
           <li id="navMenuButton">
             <a href="sound_baths.html">
@@ -33,7 +33,7 @@
           </li>
           <li>
             <a href="about.html">
-              <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> About</a>
+              <span class="fas fa-dna"></span><br class="hidden-xs"> About</a>
           </li><!--
           <li id="phone" class="hidden-xs">
             <a href="tel:410-602-5008">
