--- a/snippets/footerSnippet.html
+++ b/snippets/footerSnippet.html
@@ -1,29 +1,38 @@
-    <div class="container">
-        <div class="row">
-          <section id="contact" class="container col-sm-6">
-            <!-- <span>Contact me:</span><br> -->
-            <a href = "tel: 435-757-6722"  id="phne">
-              <i class="fa fa-phone"></i>
-              <div>435-757-6722</div>
-            </a>
-            <a href = "mailto: ThetaAngel11@gmail.com"  id="email">
-              <i class="fa fa-envelope"> </i>
-              <div>ThetaAngel11@gmail.com</div>
-            </a>
-            <a href="https://instagram.com/danaenergy?utm_medium=copy_link" id="instagram">
-              <i class="fab fa-instagram"></i>
-              <div>danaenergy</div>
-            </a>
-            <a href="#" id="tiktok">
-              <i class="fab fa-tiktok"></i>
-              <div>danahealings.soundbath</div>
-            </a>
-            <a href="https://www.facebook.com/dana.wylie.96" id="facebook">
-              <i class="fab fa-facebook"></i>
-              <div>dana.wylie.96</div>
-            </a>
-        </div>
-        <div class="text-center">&copy; Copyright DanaEnergy 2022</div>
-      </div>
+<div id="contact" class="container">
+  <div class="row justify-content-center" >
+      <!-- <span>Contact me:</span><br> -->
+    <div class="col-lg-auto col-xs-7">  
+      <a href = "tel: 435-757-6722"  id="phne" >
+        <i class="fa fa-phone"></i>
+        <span>435-757-6722</span>
+      </a>
+    </div>  
+    <div class="col-lg-auto col-xs-7">  
+      <a href = "mailto: ThetaAngel11@gmail.com"  id="email">
+        <i class="fa fa-envelope"> </i>
+        <span>ThetaAngel11@gmail.com</span>
+      </a>
+    </div>  
+    <div class="col-lg-auto col-xs-7">  
+      <a href="https://instagram.com/danaenergy?utm_medium=copy_link" id="instagram">
+        <i class="fab fa-instagram"></i>
+        <span>danaenergy</span>
+      </a>
+    </div>  
+    <div class="col-lg-auto col-xs-7">  
+      <a href="https://www.tiktok.com/@danahealings.soundbath" id="tiktok">
+        <i class="fab fa-tiktok"></i>
+        <span>danahealings.soundbath</span>
+      </a>
+    </div>  
+    <div class="col-lg-auto col-xs-7">  
+      <a href="https://www.facebook.com/dana.wylie.96" id="facebook">
+        <i class="fab fa-facebook"></i>
+        <span>dana.wylie.96</span>
+      </a>
+    </div> 
+  </div> 
+  <div class="text-center">&copy; Copyright DanaEnergy 2022</div>
+</div>
     
 
