Fixed header functionality

--- a/snippets/footerSnippet.html
+++ b/snippets/footerSnippet.html
@@ -3,31 +3,36 @@
       <!-- <span>Contact me:</span><br> -->
     <div class="col-lg-auto col-xs-7">  
       <a href = "tel: 435-757-6722"  id="phne" >
-        <i class="fa fa-phone"></i>
+        <img src="images/phoneLogo.png">
+        <!-- <i class="fa fa-phone"></i> -->
         <span>435-757-6722</span>
       </a>
     </div>  
     <div class="col-lg-auto col-xs-7">  
       <a href = "mailto: ThetaAngel11@gmail.com"  id="email">
-        <i class="fa fa-envelope"> </i>
+        <img src="images/emailLogo.png">
+        <!-- <i class="fa fa-envelope"> </i> -->
         <span>ThetaAngel11@gmail.com</span>
       </a>
     </div>  
     <div class="col-lg-auto col-xs-7">  
       <a href="https://instagram.com/danaenergy?utm_medium=copy_link" id="instagram">
-        <i class="fab fa-instagram"></i>
+        <img src="images/instagramLogo.png">
+        <!-- <i class="fab fa-instagram"></i> -->
         <span>danaenergy</span>
       </a>
     </div>  
     <div class="col-lg-auto col-xs-7">  
-      <a href="https://www.tiktok.com/@danahealings.soundbath" id="tiktok">
-        <i class="fab fa-tiktok"></i>
+      <a href="https://www.tiktok.com/@danahealings.soundbath" >
+        <img id="tiktok" src="images/tiktokLogo.png">
+        <!-- <i class="fab fa-tiktok"></i> -->
         <span>danahealings.soundbath</span>
       </a>
     </div>  
     <div class="col-lg-auto col-xs-7">  
       <a href="https://www.facebook.com/dana.wylie.96" id="facebook">
-        <i class="fab fa-facebook"></i>
+        <img src="images/facebookLogo.png">
+        <!-- <i class="fab fa-facebook"></i> -->
         <span>dana.wylie.96</span>
       </a>
     </div> 
