--- a/snippets/headerSnippet.html
+++ b/snippets/headerSnippet.html
@@ -1,45 +1,25 @@
-<nav id="header-nav" class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <a href="index.html" class="pull-left visible-md visible-lg">
-          <!--<div id="logo-img" alt="Logo image"></div>-->
-        </a>
+<nav class="navbar navbar-expand-lg">
+  <img src="images/businessLogo.png"></img>
+  <a class="navbar-brand" href="index.html">Dana Energy</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <div class="navbar-brand">
-          <a href="index.html"><div>Dana Energy</div></a>
-        </div>
 
-        <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      
-      <div id="collapsable-nav" class="collapse navbar-collapse">
-         <ul id="nav-list" class="nav navbar-nav navbar-right">
-          <li id="navHomeButton" >
-            <a href="index.html">
-              <span class="glyphicon glyphicon-home"></span><br class="hidden-xs"> Home</a>
-          </li>
-          <li>
-            <a href="theta_healing.html">
-              <span class="glyphicon glyphicon-eye-open"></span><br class="hidden-xs"> ThetaHealing</a>
-          </li>
-          <li id="navMenuButton">
-            <a href="sound_baths.html">
-              <span class="glyphicon glyphicon-headphones"></span><br class="hidden-xs"> Sound Baths</a>
-          </li>
-          <li>
-            <a href="about.html">
-              <span class="fas fa-dna"></span><br class="hidden-xs"> About</a>
-          </li><!--
-          <li id="phone" class="hidden-xs">
-            <a href="tel:410-602-5008">
-              <span>410-602-5008</span></a><div>* We Deliver</div>
-          </li>-->
-        </ul><!-- #nav-list -->
-      </div><!-- .collapse .navbar-collapse -->
-    </div><!-- .container -->
-  </nav><!-- #header-nav -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><i class="fas fa-home"></i>Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link glyphicon glyphicon-eye-open" href="theta_healing.html"><i class="fas fa-eye"></i>Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="sound_baths.html"><i class="fas fa-headphones"></i>Sound Baths</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="about.html"><i class="fas fa-dna"></i>About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
