Changed word for an icon

--- a/snippets/headerSnippet.html
+++ b/snippets/headerSnippet.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="index.html"><i class="fas fa-home"></i>Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link glyphicon glyphicon-eye-open" href="theta_healing.html"><i class="fas fa-eye"></i>Link</a>
+        <a class="nav-link glyphicon glyphicon-eye-open" href="theta_healing.html"><i class="fas fa-eye"></i>ThetaHealing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="sound_baths.html"><i class="fas fa-headphones"></i>Sound Baths</a>
